test/sematest/invalid/comparison_operators.java
class B {

}

class A {
  public static void main(String[] args) {
    new A() <= new B();
  }
}